--- a/style.css
+++ b/style.css
@@ -1591,7 +1591,7 @@ ul {
 /*# sourceMappingURL=style.css.map */
 
 /* START CONFIG YOUTUBE BUTTON PLAY */
-.youtube {
+.youtube_img {
   background-color: #000;
   margin-bottom: 0px;
   position: relative;
@@ -1599,13 +1599,13 @@ ul {
   overflow: hidden;
   cursor: pointer;
 }
-.youtube img {
+.youtube_img img {
   width: 100%;
   top: -16.84%;
   left: 0;
   opacity: 0.8;
 }
-.youtube .play-button {
+.youtube_img .play-button {
   width: 70px;
   height: 44px;
   background-color: #333;
@@ -1614,29 +1614,29 @@ ul {
   opacity: 0.8;
   border-radius: 8px;
 }
-.youtube .play-button:before {
+.youtube_img .play-button:before {
   content: "";
   border-style: solid;
   border-width: 15px 0 15px 26.0px;
   border-color: transparent transparent transparent #fff;
 }
-.youtube img,
-.youtube .play-button {
+.youtube_img img,
+.youtube_img .play-button {
   cursor: pointer;
 }
-.youtube img,
-.youtube iframe,
-.youtube .play-button,
-.youtube .play-button:before {
+.youtube_img img,
+.youtube_img iframe,
+.youtube_img .play-button,
+.youtube_img .play-button:before {
   position: absolute;
 }
-.youtube .play-button,
-.youtube .play-button:before {
+.youtube_img .play-button,
+.youtube_img .play-button:before {
   top: 50%;
   left: 50%;
   transform: translate3d( -50%, -50%, 0 );
 }
-.youtube iframe {
+.youtube_img iframe {
   height: 100%;
   width: 100%;
   top: 0;
