--- a/style.css
+++ b/style.css
@@ -1685,5 +1685,28 @@ ul {
 }
 /* END CONFIG FILTER SEARCH */
 
+/* START VIDEO BACKGROUND */
 
+.wrap {
+  /*Ajuste a largura e altura desejadas aqui*/
+  width: 100%;
+  height: 300px;
 
+  /*isto fará o elemento video e o .container se adaptarem ao .wrap*/
+  position: relative;
+}
+
+.wrap > .bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; /*apenas um -1 é necessário quando se trabalha com relative + absolute, sendo pai e filho*/
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* evita do video passar a altura desejada do .wrap */
+}
+.wrap > .bg-video > video {
+  width: 100%;
+}
+
+/* END VIDEO BACKGROUND */
